Reactivate sub-project ':test:org.eclipse.virgo.kernel.deployer.test'